Updated this code...
made changes to ensure we get input properly...

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -14,14 +14,17 @@
 <body>
   <div>
     <h1>Voice to Voice Bot</h1>
+    <label for="voice-input"></label>
+    <textarea name="voice-input" id="voice-input"></textarea>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
       expedita at veniam, pariatur aliquam provident voluptas recusandae
       accusantium nam exercitationem laudantium repudiandae qui saepe sit,
       perspiciatis ipsa ea maxime odio.
     </p>
-    <button>record</button>
-    <button>Send</button>
+    <button onclick="alert('Recorded')">Record</button>
+    <button onclick="alert('Sent')">Send</button>
+    <button onclick="alert('Edited')">Edit</button>
   </div>
 </body>
 
