--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -1,31 +1,34 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Voice to Voice" />
+    <meta name="keywords" content="Voice to Voice" />
+    <meta name="author" content="Voice to Voice" />
+    <title>Voice to Voice Bot</title>
+    <script
+      src="https://unpkg.com/htmx.org@2.0.3"
+      integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <meta name="description" content="Voice to Voice" />
-  <meta name="keywords" content="Voice to Voice" />
-  <meta name="author" content="Voice to Voice" />
-  <title>Voice to Voice Bot</title>
-</head>
-
-<body>
-  <div>
-    <h1>Voice to Voice Bot</h1>
-    <label for="voice-input"></label>
-    <textarea name="voice-input" id="voice-input"></textarea>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-      expedita at veniam, pariatur aliquam provident voluptas recusandae
-      accusantium nam exercitationem laudantium repudiandae qui saepe sit,
-      perspiciatis ipsa ea maxime odio.
-    </p>
-    <button onclick="alert('Recorded')">Record</button>
-    <button onclick="alert('Sent')">Send</button>
-    <button onclick="alert('Edited')">Edit</button>
-  </div>
-</body>
-
+  <body>
+    <div>
+      <h1>Voice to Voice Bot</h1>
+      <label for="voice-input"></label>
+      <textarea name="voice-input" id="voice-input"></textarea>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+        expedita at veniam, pariatur aliquam provident voluptas recusandae
+        accusantium nam exercitationem laudantium repudiandae qui saepe sit,
+        perspiciatis ipsa ea maxime odio.
+      </p>
+      <button onclick="alert('Recorded')">Record</button>
+      <button onclick="alert('Sent')">Send</button>
+      <button onclick="alert('Edited')">Edit</button>
+    </div>
+  </body>
 </html>
