--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -8,11 +8,19 @@
     <meta name="keywords" content="Voice to Voice" />
     <meta name="author" content="Voice to Voice" />
     <title>Voice to Voice Bot</title>
+
+    <!-- here are the tools we need to use -->
     <script
       src="https://unpkg.com/htmx.org@2.0.3"
       integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
       crossorigin="anonymous"
     ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+
+    <!-- here is our script -->
     <script>
       function send() {
         console.log("send");
@@ -24,6 +32,50 @@
         console.log("edit");
       }
     </script>
+
+    <!-- here are our styles -->
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      div {
+        margin: 0 auto;
+        padding: 1rem;
+        max-width: 800px;
+      }
+      h1 {
+        text-align: center;
+      }
+      textarea {
+        width: 100%;
+        height: 200px;
+        margin: 1rem 0;
+        padding: 0.5rem;
+        border: 1px solid #ccc;
+        border-radius: 0.25rem;
+      }
+      button {
+        padding: 0.5rem 1rem;
+        margin: 0.5rem;
+        border: none;
+        border-radius: 0.25rem;
+        background-color: #007bff;
+        color: white;
+        cursor: pointer;
+      }
+      button:hover {
+        background-color: #0056b3;
+      }
+      #record {
+        background-color: #f54257;
+      }
+      #record:hover {
+        background-color: #d93d59;
+      }
+    </style>
   </head>
 
   <body>
@@ -37,9 +89,9 @@
         accusantium nam exercitationem laudantium repudiandae qui saepe sit,
         perspiciatis ipsa ea maxime odio.
       </p>
-      <button onclick="send()">Record</button>
-      <button onclick="record()">Send</button>
-      <button onclick="edit()">Edit</button>
+      <button onclick="record()" id="record">Record</button>
+      <button onclick="send()" id="send">Send</button>
+      <button onclick="edit()" id="edit">Edit</button>
     </div>
   </body>
 </html>
