--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -1,97 +1,101 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Voice to Voice" />
-    <meta name="keywords" content="Voice to Voice" />
-    <meta name="author" content="Voice to Voice" />
-    <title>Voice to Voice Bot</title>
 
-    <!-- here are the tools we need to use -->
-    <script
-      src="https://unpkg.com/htmx.org@2.0.3"
-      integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
-    ></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Voice to Voice" />
+  <meta name="keywords" content="Voice to Voice" />
+  <meta name="author" content="Voice to Voice" />
+  <title>Voice to Voice Bot</title>
 
-    <!-- here is our script -->
-    <script>
-      function send() {
-        console.log("send");
-      }
-      function record() {
-        console.log("record");
-      }
-      function edit() {
-        console.log("edit");
-      }
-    </script>
+  <!-- here are the tools we need to use -->
+  <script src="https://unpkg.com/htmx.org@2.0.3"
+    integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq"
+    crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-    <!-- here are our styles -->
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      div {
-        margin: 0 auto;
-        padding: 1rem;
-        max-width: 800px;
-      }
-      h1 {
-        text-align: center;
-      }
-      textarea {
-        width: 100%;
-        height: 200px;
-        margin: 1rem 0;
-        padding: 0.5rem;
-        border: 1px solid #ccc;
-        border-radius: 0.25rem;
-      }
-      button {
-        padding: 0.5rem 1rem;
-        margin: 0.5rem;
-        border: none;
-        border-radius: 0.25rem;
-        background-color: #007bff;
-        color: white;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #0056b3;
-      }
-      #record {
-        background-color: #f54257;
-      }
-      #record:hover {
-        background-color: #d93d59;
-      }
-    </style>
-  </head>
+  <!-- here is our script -->
+  <script>
+    function record() {
+      console.log("record");
+    }
+    function edit() {
+      console.log("edit");
+    }
+    function send() {
+      console.log("send");
+    }
+  </script>
 
-  <body>
-    <div>
-      <h1>Voice to Voice Bot</h1>
-      <label for="voice-input"></label>
-      <textarea name="voice-input" id="voice-input"></textarea>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-        expedita at veniam, pariatur aliquam provident voluptas recusandae
-        accusantium nam exercitationem laudantium repudiandae qui saepe sit,
-        perspiciatis ipsa ea maxime odio.
-      </p>
-      <button onclick="record()" id="record">Record</button>
-      <button onclick="send()" id="send">Send</button>
-      <button onclick="edit()" id="edit">Edit</button>
-    </div>
-  </body>
+  <!-- here are our styles -->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    div {
+      margin: 0 auto;
+      padding: 1rem;
+      max-width: 800px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    textarea {
+      width: 100%;
+      height: 200px;
+      margin: 1rem 0;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.25rem;
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      margin: 0.5rem;
+      border: none;
+      border-radius: 0.25rem;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    #record {
+      background-color: #f54257;
+    }
+
+    #record:hover {
+      background-color: #d93d59;
+    }
+  </style>
+</head>
+
+<body>
+  <div>
+    <h1>Voice to Voice Bot</h1>
+    <label for="voice-input"></label>
+    <textarea name="voice-input" id="voice-input" disabled> </textarea>
+    <button onclick="edit()" id="edit">Edit</button>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+      expedita at veniam, pariatur aliquam provident voluptas recusandae
+      accusantium nam exercitationem laudantium repudiandae qui saepe sit,
+      perspiciatis ipsa ea maxime odio.
+    </p>
+    <button onclick="record()" id="record">Record</button>
+    <button onclick="send()" id="send">Send</button>
+  </div>
+</body>
+
 </html>
