--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -22,6 +22,7 @@
       console.log("record");
     }
     function edit() {
+      let txtarea = document.getElement("textarea");
       console.log("edit");
     }
     function send() {
