This is much better...
now this will work...

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -61,7 +61,7 @@
       const data = document.getElementById("voice-input").value;
       const gptResult = document.getElementById("gpt-result");
       gptResult.innerText = "Loading...";
-      fetch("http://localhost:5000/api/", {
+      fetch("/api/", {
         method: "POST",
         headers: {
           "Content-Type": "text/plain",
