--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -31,9 +31,7 @@
       <button>Speak</button>
     </center>
     <dialog id="error-msg">
-      <p></p>
-      <button onclick="document.getElementById('error-msg').close()">
-        X
+      <p></p><button onclick="document.getElementById('error-msg').close()">X
       </button>
     </dialog>
   </div>
