--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -10,8 +10,159 @@
     <title>Voice to Voice Bot</title>
 
     <!-- here is our script & style files -->
-    <script defer src="/static/js/script.js"></script>
-    <link rel="stylesheet" href="/static/css/styles.css" />
+    <script>
+    let isRecording = false;
+    let recognition;
+
+    function record() {
+      let txtarea = document.getElementById("voice-input");
+      const recordBtn = document.getElementById("record");
+      window.SpeechRecognition =
+        window.SpeechRecognition || window.webkitSpeechRecognition;
+
+      if (!isRecording) {
+        recognition = new SpeechRecognition();
+        recognition.interimResults = true;
+        recognition.lang = "en-US";
+        recognition.continuous = true;
+        recognition.start();
+        isRecording = true;
+        recordBtn.innerHTML = "Stop";
+
+        recognition.addEventListener("result", (e) => {
+          const transcript = Array.from(e.results)
+          .map((result) => result[0])
+          .map((result) => result.transcript)
+          .join("");
+          console.log(transcript);
+          txtarea.value = transcript;
+        });
+
+        recognition.addEventListener("end", () => {
+          if (isRecording) {
+            recognition.start();
+          }
+        });
+      } else {
+        recognition.stop();
+        isRecording = false;
+        recordBtn.innerHTML = "Record";
+      }
+    }
+
+    function edit() {
+      let txtarea = document.getElementById("voice-input");
+      txtarea.disabled = !txtarea.disabled;
+    }
+
+    function send() {
+      const data = document.getElementById("voice-input").value;
+      const errorMsg = document.getElementById("error-msg");
+      const gptResult = document.getElementById("gpt-result");
+      gptResult.innerText = "Loading...";
+      fetch("/api/", {
+        method: "POST",
+        headers: {
+          "Content-Type": "text/plain",
+        },
+        body: data,
+      })
+        .then((res) => {
+          return res.json();
+        })
+        .then((data) => {
+          console.log(data);
+          if (data.error) {
+            gptResult.innerText = "Result will be displayed here";
+            errorMsg.querySelector("p").innerText = data.error;
+            errorMsg.showModal();
+            return;
+          }
+          gptResult.innerText = data.message;
+        })
+        .catch((err) => {
+          console.error(err.json().error);
+          gptResult.innerText = "Result will be displayed here";
+          errorMsg.innerHTML += "\nError: " + err;
+          errorMsg.showModal();
+        });
+    }
+  </script>
+    <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    div {
+      margin: 0 auto;
+      padding: 1rem;
+      max-width: 800px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    textarea {
+      width: 100%;
+      height: 200px;
+      margin: 1rem 0;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.25rem;
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      margin: 0.5rem;
+      border: none;
+      border-radius: 0.25rem;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    #record {
+      background-color: #f54257;
+    }
+
+    #record:hover {
+      background-color: #d93d59;
+    }
+
+    #gpt-result {
+      margin: 1rem 0;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.25rem;
+      text-align: center;
+    }
+
+    #error-msg {
+      display: flex;
+      padding: 1rem;
+      border: 1px solid #f54257;
+      border-radius: 0.25rem;
+      text-align: center;
+      background-color: #f54257;
+      color: white;
+    }
+
+    #error-msg button {
+      background-color: #f54257;
+      color: white;
+      border: none;
+      border-radius: 0.25rem;
+      cursor: pointer;
+    }
+    </style>
   </head>
 
   <body>
