--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Voice to Voice" />
-    <meta name="keywords" content="Voice to Voice" />
-    <meta name="author" content="Voice to Voice" />
-    <title>Voice to Voice Bot</title>
 
-    <!-- here is our script & style files -->
-    <script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Voice to Voice" />
+  <meta name="keywords" content="Voice to Voice" />
+  <meta name="author" content="Voice to Voice" />
+  <title>Voice to Voice Bot</title>
+
+  <!-- here is our script & style files -->
+  <script>
     let isRecording = false;
     let recognition;
 
@@ -31,9 +32,9 @@
 
         recognition.addEventListener("result", (e) => {
           const transcript = Array.from(e.results)
-          .map((result) => result[0])
-          .map((result) => result.transcript)
-          .join("");
+            .map((result) => result[0])
+            .map((result) => result.transcript)
+            .join("");
           console.log(transcript);
           txtarea.value = transcript;
         });
@@ -88,103 +89,27 @@
         });
     }
   </script>
-    <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+</head>
 
-    div {
-      margin: 0 auto;
-      padding: 1rem;
-      max-width: 800px;
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    textarea {
-      width: 100%;
-      height: 200px;
-      margin: 1rem 0;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 0.25rem;
-    }
-
-    button {
-      padding: 0.5rem 1rem;
-      margin: 0.5rem;
-      border: none;
-      border-radius: 0.25rem;
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    #record {
-      background-color: #f54257;
-    }
-
-    #record:hover {
-      background-color: #d93d59;
-    }
-
-    #gpt-result {
-      margin: 1rem 0;
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 0.25rem;
-      text-align: center;
-    }
-
-    #error-msg {
-      display: flex;
-      padding: 1rem;
-      border: 1px solid #f54257;
-      border-radius: 0.25rem;
-      text-align: center;
-      background-color: #f54257;
-      color: white;
-    }
-
-    #error-msg button {
-      background-color: #f54257;
-      color: white;
-      border: none;
-      border-radius: 0.25rem;
-      cursor: pointer;
-    }
-    </style>
-  </head>
-
-  <body>
-    <div>
+<body>
+  <div>
+    <center>
       <h1>Voice to Voice Bot</h1>
       <label for="voice-input"></label>
-      <textarea name="voice-input" id="voice-input" disabled> </textarea>
-      <center>
-        <button onclick="edit()" id="edit">Edit</button>
-        <button onclick="record()" id="record">Record</button>
-        <button type="button" onclick="send()" id="send">Send</button>
-      </center>
+      <textarea name="voice-input" id="voice-input" disabled> </textarea><br />
+      <button onclick="edit()" id="edit">Edit</button>
+      <button onclick="record()" id="record">Record</button>
+      <button type="button" onclick="send()" id="send">Send</button>
       <p id="gpt-result">Result will be displayed here</p>
-      <center>
-        <button>Speak</button>
-      </center>
+      <button>Speak</button>
       <dialog id="error-msg">
         <p></p>
         <button onclick="document.getElementById('error-msg').close()">
           X
         </button>
       </dialog>
-    </div>
-  </body>
+    </center>
+  </div>
+</body>
+
 </html>
